--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome to mmy webpage
+title: Welcome to my webpage
 description: Feel free to stay tuned to my page !
